# MMAS-Python

./: .gitignore  README.md  atsp  main.py  pyproject.toml
aco_results/: berlin52.tour  eil101.tour  ftv33.tour  ftv44.tour  ftv64.tour  kroA100.tour  mymap.html  opt_map.html  pcb442.tour  pr124.tour  results.csv  unige-solution-lkh.tour  unige_mmas.tour
datasets/atsp/: unige-problem.atsp
datasets/geojson/: genoa.geojson
mmas/: algo.py  parser.py  utilities.py
